# Stratum-Quant-Analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_SCHEDULER.md  Auditor.py  LICENSE  LLAMA_INTEGRATION.md  README.md  SETUP_COMPLETE.md  USER_GUIDE.md  __diag__.py  analysis_suite.py  lab_sandbox.py  pyproject.toml  pytest.ini  requirements.txt  respond_to_approval.py  run_optimizer_daily.bat  run_realtime_lab.bat  setup_scheduler.bat  streamlit_app.py  test_llama_integration.py  test_telegram.py
.claude/projects/c--Users-liagk-Project-scenario-planner/memory/: MEMORY.md  project_gitignore_data_tracking.md  project_optimizer_improvements.md  project_risk_management.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  optimizer-scheduler.yml
UI/: app.py  constants.py  content.py  helpers.py  realtime_lab.py  rendering.py  runtime.py  streamlit_app.py  traffic_light.py
UI/tabs/: __init__.py  analysis_tabs.py  assistant_tab.py  data_tabs.py  edge_tab.py  ops_tabs.py
data/users/default/: pipeline_checkpoint.json
data/users/default/gold/: master_table_contract.json
data/users/default/gold/governance/: governance_decision_1774696788653.json  governance_decision_1774733328812.json  governance_decision_1774734659109.json  governance_decision_1774734763267.json  governance_decision_1774735314403.json  governance_decision_1774735577604.json  governance_decision_1774736818082.json  governance_decision_1774737258143.json  governance_decision_1774737258154.json  governance_decision_1774762091525.json  governance_decision_1774762095540.json  governance_decision_current_run.json
data/users/default/processed/: quality_history.jsonl
data/users/default/processed/fred/: consumer_sentiment_silver.parquet  energy_index_silver.parquet  fed_funds_rate_silver.parquet  industrial_production_silver.parquet  inflation_silver.parquet  unemployment_rate_silver.parquet  us10y_treasury_yield_silver.parquet  vix_index_silver.parquet
data/users/default/processed/quality/: dead_letter.jsonl  quality_report.json
data/users/default/processed/worldbank/: energy_usage__wld_silver.parquet  gdp_growth__wld_silver.parquet  inflation_wb__wld_silver.parquet  trade_openness__wld_silver.parquet  unemployment_wb__wld_silver.parquet
data/users/default/processed/yfinance/: aapl_financials_silver.parquet  abbv_financials_silver.parquet  adbe_financials_silver.parquet  amgn_financials_silver.parquet  apd_financials_silver.parquet  avgo_financials_silver.parquet  bac_financials_silver.parquet  cat_financials_silver.parquet  cvx_financials_silver.parquet  ge_financials_silver.parquet  gs_financials_silver.parquet  hon_financials_silver.parquet  jnj_financials_silver.parquet  jpm_financials_silver.parquet  (+17 more)
data/users/default/raw/: catalog.json
notebooks/: demo_analysis.ipynb
output/default/: ai_pipeline_briefing.json  ai_pipeline_briefing.md  analysis_results.json  audit_report.json  backtest_2020.json  correlation_matrix.csv  elasticity.json  feature_decay.json  forecasting.json  governance_gate.json  governance_report.json  lag_analysis.json  monte_carlo.json  sensitivity_regression.json  stress_test.json
scripts/: scheduler_batch.py
src/: __init__.py  ai_agent.py  main.py  optimizer.py  scheduler.py  secret_store.py
src/Fetchers/: BaseFetcher.py  Factory.py  FredFetcher.py  ProjectConfig.py  WorldBankFetcher,py  WorldBankFetcher.py  YFinanceFetcher.py
src/Medallion/: MedallionPipeline.py  __init__.py  bronze.py
src/Medallion/gold/: GoldLayer.py
src/Medallion/gold/AnalysisSuite/: auto_ml.py  backtest.py  correl_mtrx.py  elasticity.py  feature_decay.py  forecasting.py  governance.py  lag.py  mixed_frequency.py  monte_carlo.py  sensitivity_reg.py  sesnsitivity_reg.py  stress_test.py
src/Medallion/silver/: contracts.py  schema.py  silver.py
src/exceptions/: AIAgentExceptions.py  FetchersExceptions.py  LoggerExceptions.py  MedallionExceptions.py  StreamlitExceptions.py  __init__.py
src/logger/: Catalog.py
src/logger/Messages/: DirectionsMess.py  FetchersMess.py  MainMess.py  MedallionMess.py
tests/: conftest.py  test_exceptions.py  test_gold_output.py  test_integration_exceptions.py  test_projectconfig.py
tests/test_src/: test_ai_agent.py  test_main.py
tests/test_src/logger/: test_catalog.py  test_messages.py
tests/test_src/test_Fetchers/: test_base_fetcher.py  test_factory.py  test_fred_fetcher.py  test_projectconfig.py  test_worldbank_fetcher.py  test_yfinance_fetcher.py
tests/test_src/test_Medallion/: conftest.py  test_bronze.py  test_gold.py  test_pipeline.py  test_silver.py
(+45 files in other folders)
