[project]
name = "scenario-planner"
version = "0.1.0"
description = ""
authors = [
    {name = "EvangelGK",email = "liagkan@gmail.comK"}
]
requires-python = ">=3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "yfinance (>=1.2.0,<2.0.0)",
    "wbgapi (>=1.0.14,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
