[project]
name = "Stratum-Quant-Analytics"
version = "0.1.0"
description = ""
license = {text = "CC BY-NC-ND 4.0"}
authors = [
    {name = "EvangelGK",email = "liagkan@gmail.com"}
]

requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.4.2,<3.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "scipy>=1.17.1,<2.0.0",
    "pyarrow>=23.0.1,<24.0.0",
    "fredapi>=0.5.2,<1.0.0",
    "yfinance>=1.2.0,<2.0.0",
    "wbgapi>=1.0.14,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pandera>=0.29.0,<1.0.0",
    "statsmodels>=0.14.6,<1.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "fernet>=1.0.1,<2.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "streamlit>=1.45.0,<2.0.0",
    "plotly>=5.24.0,<6.0.0",
    "requests>=2.31.0,<3.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"
jupyter = "^1.1.1"
mypy = "^1.8.0"
black = "^24.4.2"
pre-commit = "^4.0.0"
pytest-xdist = "^3.5.0"

[tool.ruff]
line-length = 160
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 160

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
# Strict checks disabled — we only care if core Quant logic is broken
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false
show_error_codes = true


